CHANGES.txt for Tux Paint

Tux Paint - A simple drawing program for children.

Copyright (c) 2002-2020
Various contributors (see below, and AUTHORS.txt)
http://www.tuxpaint.org/

$Id$

2020.August.15 (0.9.25)
  * New Features
    ------------
    * Export drawings:
      * GIF export option from the Open -> Slideshow dialog.
        (Closes https://sourceforge.net/p/tuxpaint/feature-requests/191/)
        * Utilizes "gifenc", public domain by Marcel Rodrigues:
          https://github.com/lecram/gifenc
        * Depends on "libimagequant", from the "pngquant2" project:
          https://github.com/ImageOptim/libimagequant
          (GPL v3 or later, for Free/Libre Open Source Software)
      * Single image (PNG) export from the Open dialog.
        (Closes https://sourceforge.net/p/tuxpaint/feature-requests/192/)
      * Both utilize XDG user dirs settings, if available, to determine
        where to store them, or "~/Pictures", otherwise.  In those cases,
        files are stored in a new "TuxPaint" subdirectory.
      * The "--exportdir" option can be used to override the default
        location (but a "TuxPaint" subdir. will NOT be placed there).

    * Shape controls:
      * Draw shapes from the center (as in previous versions of Tux Paint)
        or from a corner (similar to the default mode of most other
        graphics tools).
      * The controls to modify the drawing behavior can be removed,
        for simplification of Tux Paint's interface (for younger users).

  * Ports & Building
    ----------------
    * Corrections for Haiku not opening saved files.
      (Ref: https://github.com/haikuports/haikuports/issues/3045)
      Gerasim Troeglazov <3dEyes@gmail.com>

  * New Brushes
    -----------
    * Footprints
      * Human feet
        Based on Openclipart by "netalloy"
        (https://openclipart.org/artist/netalloy)
        Creative Commons Zero 1.0 Public Domain License

      * Paw (dog or cat like)
        Based on Openclipart by "alinager"